@@ -1,6 +1,7 @@
 eZ Comments change log
 
 1.1.0 - released 2010/x/y
+ - Fixed bug #016539: Cronjob for sending for one notification email to show multiple comments fails
  - Fixed bug #016653: ezcomments: name of db schema def file is wrong
 
 1.0.0 Final - released 2010/3/30
